# cataclysm_translator

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
app/: main.js  preload.js
app/lib/: extract.js  scan.js  virtual-workspace.js  writeback.js
scripts/: copy-renderer-opencc.test.mjs  copy-renderer.mjs  lang-actions.test.mjs  lang-workflow.test.mjs  mod-selection.test.mjs  package-scripts.test.mjs  po-convert.test.mjs  po-tabs.test.mjs  prepare-runtime-python.mjs  prepare-runtime-python.test.mjs  release-metadata.test.mjs  renderer-module-split.test.mjs  renderer-runtime-path.test.mjs  renderer-support-modules.test.mjs  rust-readable-errors.test.mjs  tauri-only.test.mjs  virtual-workspace.test.mjs  workspace-controller.test.mjs  workspace-data.test.mjs
src/: main.ts  preload.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/runtime/python/: python312._pth
src-tauri/runtime/python/DLLs/: _ctypes_test.pyd  _msi.pyd  _sqlite3.pyd  _testbuffer.pyd  _testcapi.pyd  _testclinic.pyd  _testconsole.pyd  _testimportmultiple.pyd  _testinternalcapi.pyd  _testmultiphase.pyd  _testsinglephase.pyd  _tkinter.pyd  _uuid.pyd  _zoneinfo.pyd  winsound.pyd
src-tauri/src/: main.rs
src/lib/: extract.ts  scan.ts  types.ts  writeback.ts
src/renderer/: config-store.ts  index.html  lang-actions-bridge.ts  lang-actions-po.ts  lang-actions-shared.ts  lang-actions-workspace.ts  lang-actions.ts  lang-workflow.ts  mod-selection.ts  po-convert.ts  po-tabs.ts  renderer.ts  rule-presets.ts  tauri-bridge.js  virtual-workspace.ts  (+2 more)
(+10 files in other folders)
