[package]
name = "cataclysm-translator-tauri"
version = "0.4.0"
description = "Cataclysm Translator"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
walkdir = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rfd = "0.15"
urlencoding = "2"
encoding_rs = "0.8"

[features]
default = []
